tests/snapshots/run_wpt_conformance__coreml_mul_float16_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul float16 broadcast 3D to 4D",
    "coreml",
    "PASS",
)
