tests/snapshots/run_wpt_conformance__coreml_mul_float32_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mul.https.any.js",
    "mul float32 5D tensors",
    "coreml",
    "PASS",
)
